Implemented list of all exhibitions on the main page. Also I added exhibition entity.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -1,3 +1,17 @@
 home.page=Home
 welcome.message=Welcome to our exhibitions!
 login.message=Log in
+
+table.topic=Topic
+table.start.date=Start Date
+table.end.date=End Date
+table.start.time=Start Time
+table.end.time=End Time
+table.rooms=Rooms
+table.price=Price
+table.state=State
+table.buy.ticket=Buy a ticket
+table.buy=Buy
+table.cancel=Cancel
+table.plan=Plan
+table.elements.not.found=No elements found
