Implemented cancelling, planning, statistics and pagination.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -15,3 +15,5 @@ table.buy=Buy
 table.cancel=Cancel
 table.plan=Plan
 table.elements.not.found=No elements found
+
+statistics.table.visitors=Visitors
