--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -1,6 +1,10 @@
 home.page=Home
 welcome.message=Welcome to our exhibitions!
 login.message=Log in
+title.href.logout=Logout
+title.register=Register
+title.href.statistics=Statistics
+title.href.add.exhibition=Add exhibition
 
 table.topic=Topic
 table.start.date=Start Date
@@ -17,3 +21,26 @@ table.plan=Plan
 table.elements.not.found=No elements found
 
 statistics.table.visitors=Visitors
+
+form.submit=Submit
+form.email=Email...
+form.username=Username...
+form.password=Password...
+
+greeting.admin=Hello, ADMIN!
+greeting.user=Hello, USER!
+
+add.exhibition.form.topic=Topic:
+add.exhibition.form.start.date=Start date:
+add.exhibition.form.end.date=End date:
+add.exhibition.form.rooms.number=Rooms number:
+add.exhibition.form.start.time=Opens at:
+add.exhibition.form.end.time=Closes at:
+add.exhibition.form.price=Price:
+
+cancel.exhibition=Exhibition was canceled!
+plan.exhibition=Exhibition was planned!
+
+buy.ticket.success=You've successfully bought a ticket!
+
+log.in.request=Please, log in to buy a ticket!
