Implemented error page.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -44,3 +44,5 @@ plan.exhibition=Exhibition was planned!
 buy.ticket.success=You've successfully bought a ticket!
 
 log.in.request=Please, log in to buy a ticket!
+
+error.page.message=Error occurred.
