Implemented filtering by date.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -46,3 +46,5 @@ buy.ticket.success=You've successfully bought a ticket!
 log.in.request=Please, log in to buy a ticket!
 
 error.page.message=Error occurred.
+
+filtering.filter.by.date=Filter by date
