Cleaned my code and added regexes to registration process.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -46,5 +46,10 @@ buy.ticket.success=You've successfully bought a ticket!
 log.in.request=Please, log in to buy a ticket!
 
 error.page.message=Error occurred.
+addition.exhibition.error=Your data is invalid
 
 filtering.filter.by.date=Filter by date
+
+username.regex.regexp=[A-Z][a-z]{1,20}$
+email.regex=^(.+)@(.+)$
+password.regex.regexp=[A-Za-z0-9]{3,30}$
