Implemented output about successful registration.

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -53,3 +53,5 @@ filtering.filter.by.date=Filter by date
 username.regex.regexp=[A-Z][a-z]{1,20}$
 email.regex=^(.+)@(.+)$
 password.regex.regexp=[A-Za-z0-9]{3,30}$
+
+register.success=You've successfully registered!
