Implemented output that exhibition was successfully added or inserted data was invalid

--- a/ServletExhibitions/src/main/resources/texts_en.properties
+++ b/ServletExhibitions/src/main/resources/texts_en.properties
@@ -46,6 +46,7 @@ buy.ticket.success=You've successfully bought a ticket!
 log.in.request=Please, log in to buy a ticket!
 
 error.page.message=Error occurred.
+addition.exhibition.success=You've successfully added new exhibition.
 addition.exhibition.error=Your data is invalid
 
 filtering.filter.by.date=Filter by date
